--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Builds/ThirdYearFinal_v1.0_Windows.zip"
+export_path="../Builds/PicknPunch_v1.0_Windows.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Builds/ThirdYearFinal_v1.0_Linux.zip"
+export_path="../Builds/PicknPunch_v1.0_Linux.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
